[tool.poetry]
name = "github-test"
version = "0.1.0"
description = ""
authors = ["miles-kt-inkeep <miles@inkeep.com>"]
readme = "README.md"
packages = [{include = "github"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pycmarkgfm = "^1.2.1"
nbformat = "^5.10.4"
nbconvert = "^7.16.4"
prefect = "^3.0.2"
backoff = "^2.2.1"
pydantic = "^2.9.1"
tiktoken = "^0.7.0"
toolz = "^0.12.1"
fastapi = "^0.114.2"
pymongo = "^4.8.0"
html2text = "^2024.2.26"
gql = "^3.5.0"
pypandoc = "^1.13"
requests-toolbelt = "^1.0.0"
prefect-aws = "^0.5.0"
markdownify = "^0.13.1"
bs4 = "^0.0.2"
lxml = "^5.3.0"
discord = "^2.3.2"
slack-sdk = "^3.33.1"
ipython = "^8.28.0"
anthropic = "^0.36.2"
pyjwt = "^2.9.0"
supabase = "^2.10.0"
nango = "^0.1.2"
pyrate-limiter = "^3.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
